--- a/src/components/banners/banners.css
+++ b/src/components/banners/banners.css
@@ -18,10 +18,19 @@
     right: 5px;
     padding: 6px;
     border-radius: 4px;
-    background: #fff;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: start;
+    justify-content: start;
+    gap: 2px 4px;
+    max-height: 70%;
+    backdrop-filter: blur(2px);
 }
 
 .city {
+    color: #fff;
     font-size: 12px;
     font-family: Roboto, sans-serif;
 }
